Update email address for design file submission

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       
       <label>📎 Tasarım Dosyasını E-posta ile Gönderin</label>
       <p style="font-size: 0.9em; color: #666; margin-top: 10px;">
-        Lütfen tasarım dosyasını <strong>wallpaper@ymyos.com</strong> adresine gönderin ve aşağıdaki bilgileri ekleyin. 
+        Lütfen tasarım dosyasını <strong>yusufbaran1160@proton.me</strong> adresine gönderin ve aşağıdaki bilgileri ekleyin. 
       </p>
       
       <button type="submit">Katıl →</button>
