--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                                 </li>
                                 <li class="flex items-start gap-2">
                                     <span class="text-indigo-400">✨</span>
-                                    Tüm katılımcılara özel rozet
+                                    Tüm katılımcılara özel dijital sertifika!
                                 </li>
                             </ul>
                         </div>
